# chatbot-dummy

./: .gitignore  Dockerfile  README.md  pyproject.toml
chatbot/: app.py
